--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
                     case '1':
                         return {
                             name: 'Eblu Feo X',
-                            image: 'Photos/feo.jpg',
+                            image: 'feo.jpg',
                             description: 'The Godawari Eblu Feo X is an electric scooter designed for family use, offering extra storage and comfort.',
                             Storage: '28-liter under-seat storage, spacious enough to carry a gas cylinder.',
                             Seating: 'Designed for driver + pillion rider.',
