--- a/Jana_Variety_Store.html
+++ b/Jana_Variety_Store.html
@@ -95,7 +95,7 @@
             <!-- Add specific stationery items here -->
         </div>
         <div style="flex: 1;">
-            <img src="Photos/Jana_store/Book03.jpg" alt="Stationery" style="width: 100%; max-width: 300px;">
+            <img src="Book03.jpg" alt="Stationery" style="width: 100%; max-width: 300px;">
         </div>
     </section>
     <section id="snacks"
@@ -117,7 +117,7 @@
             <!-- Add specific snack and biscuit items here -->
         </div>
         <div style="flex: 1;">
-            <img src="Photos/Jana_store/Snaks03.webp" alt="Snacks & Biscuits" style="width: 100%; max-width: 300px;">
+            <img src="Snaks03.webp" alt="Snacks & Biscuits" style="width: 100%; max-width: 300px;">
         </div>
     </section>
 
