--- a/Jana_Variety_Store.html
+++ b/Jana_Variety_Store.html
@@ -139,7 +139,7 @@
                 Stop by Jana Variety Store and indulge in your favorite chocolates and more today!</p>
         </div>
         <div style="flex: 1;">
-            <img src="Photos/Jana_store/Chocolate03.webp" alt="Chocolates" style="width: 100%; max-width: 300px;">
+            <img src="Chocolate03.webp" alt="Chocolates" style="width: 100%; max-width: 300px;">
         </div>
         <!-- Add specific chocolate items here -->
     </section>
