--- a/Petuk_biriyani.html
+++ b/Petuk_biriyani.html
@@ -401,7 +401,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="Photos/Chicken Momo.jpeg" alt="Chicken Biryani" style="width: 100%;
+                <img src="Chicken Momo.jpeg" alt="Chicken Biryani" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
