--- a/Petuk_biriyani.html
+++ b/Petuk_biriyani.html
@@ -469,7 +469,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="Photos/WhatsApp Image 2025-04-01 at 11.48.13 2.jpeg" alt="Egg Roll" style="width: 100%;
+                <img src="WhatsApp Image 2025-04-01 at 11.48.13 2.jpeg" alt="Egg Roll" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
