--- a/Petuk_biriyani.html
+++ b/Petuk_biriyani.html
@@ -705,7 +705,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="Photos/Roti.jpg" alt="Roti" style="width: 100%;
+                <img src="Roti.jpg" alt="Roti" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
