--- a/Petuk_biriyani.html
+++ b/Petuk_biriyani.html
@@ -536,7 +536,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="Photos/Mutton Biryani.jpg" alt="Mutton Biryani" style="width: 100%;
+                <img src="Mutton Biryani.jpg" alt="Mutton Biryani" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
