--- a/Petuk_biriyani.html
+++ b/Petuk_biriyani.html
@@ -502,7 +502,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="Photos/chiken chap.jpeg" alt="Chicken Chaap" style="width: 100%;
+                <img src="chiken chap.jpeg" alt="Chicken Chaap" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
