--- a/Petuk_biriyani.html
+++ b/Petuk_biriyani.html
@@ -570,7 +570,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="Photos/Chicken-Roll.jpg" alt="Chicken Roll" style="width: 100%;
+                <img src="assets/Chicken-Roll.jpg" alt="Chicken Roll" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
