--- a/Petuk_biriyani.html
+++ b/Petuk_biriyani.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Petuk Biryani - Authentic Biryani Experience</title>
-    <link rel="icon" href="Photos/petuk logo.jpeg" type="image/jpeg">
+    <link rel="icon" href="assets/petuk logo.jpeg" type="image/jpeg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -97,7 +97,7 @@
 
         /* Hero Section */
         .hero {
-            background-image: url('Photos/biryani_background.jpeg');
+            background-image: url('assets/biryani_background.jpeg');
             /* A more relevant background image */
             background-size: cover;
             background-position: center;
@@ -291,7 +291,7 @@
 <body>
     <header style="background-color: #e44d26;">
         <div class="logo" style="display: flex; align-items: center; justify-content: center;">
-            <img src="petuk logo.jpeg" alt="Petuk Biryani Logo" class="rounded-logo" style="border-radius: 50%;
+            <img src="assets/petuk logo.jpeg" alt="Petuk Biryani Logo" class="rounded-logo" style="border-radius: 50%;
     width: 100px;
     height: 100px;
     object-fit: cover; margin-right: 1rem;">
@@ -325,7 +325,7 @@
         </nav>
     </header>
 
-    <section id="home" class="hero" style=" background-image: url('Photos/biryani_background.jpeg');
+    <section id="home" class="hero" style=" background-image: url('assets/biryani_background.jpeg');
     background-size: cover;
     background-position: center;
     color: #fff;
@@ -367,7 +367,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="Chicken Biryani.jpeg" alt="Chicken Biryani" style="width: 100%;
+                <img src="assets/Chicken Biryani.jpeg" alt="Chicken Biryani" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
@@ -401,7 +401,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="Chicken Momo.jpeg" alt="Chicken Biryani" style="width: 100%;
+                <img src="assets/Chicken Momo.jpeg" alt="Chicken Biryani" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
@@ -435,7 +435,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="chau.jpeg" alt="Masala Chaumin" style="width: 100%;
+                <img src="assets/chau.jpeg" alt="Masala Chaumin" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
@@ -469,7 +469,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="WhatsApp Image 2025-04-01 at 11.48.13 2.jpeg" alt="Egg Roll" style="width: 100%;
+                <img src="assets/WhatsApp Image 2025-04-01 at 11.48.13 2.jpeg" alt="Egg Roll" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
@@ -502,7 +502,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="chiken chap.jpeg" alt="Chicken Chaap" style="width: 100%;
+                <img src="assets/chiken chap.jpeg" alt="Chicken Chaap" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
@@ -536,7 +536,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="Mutton Biryani.jpg" alt="Mutton Biryani" style="width: 100%;
+                <img src="assets/Mutton Biryani.jpg" alt="Mutton Biryani" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
@@ -604,7 +604,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="Photos/Fried Rice.jpg" alt="Chicken Chaap" style="width: 100%;
+                <img src="assets/Fried Rice.jpg" alt="Chicken Chaap" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
@@ -637,7 +637,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="Photos/mutton-chops.jpeg" alt="Mutton Chaap" style="width: 100%;
+                <img src="assets/mutton-chops.jpeg" alt="Mutton Chaap" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
@@ -671,7 +671,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="Photos/Chicken Curry.jpg" alt="Chicken Curry" style="width: 100%;
+                <img src="assets/Chicken Curry.jpg" alt="Chicken Curry" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
@@ -705,7 +705,7 @@
     text-align: left;
     transition: transform 0.3s ease;
     /* Add transition for smooth animation */">
-                <img src="Roti.jpg" alt="Roti" style="width: 100%;
+                <img src="assets/Roti.jpg" alt="Roti" style="width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px;
