--- a/Jana_Variety_Store.html
+++ b/Jana_Variety_Store.html
@@ -44,7 +44,7 @@
             <!-- Add specific ice cream and cold drink items here -->
         </div>
         <div style="flex: 1;">
-            <img src="Photos/Jana_store/Cold Drinks03.webp" alt="Ice Cream & Cold Drinks"
+            <img src="assets/Cold Drinks03.webp" alt="Ice Cream & Cold Drinks"
                 style="width: 100%; max-width: 300px;">
         </div>
     </section>
@@ -69,7 +69,7 @@
                 Now</a>
         </div>
         <div style="flex: 1;">
-            <img src="Water03.jpg" alt="Water Bottles" style="width: 100%; max-width: 300px;">
+            <img src="assets/Water03.jpg" alt="Water Bottles" style="width: 100%; max-width: 300px;">
         </div>
     </section>
 
@@ -95,7 +95,7 @@
             <!-- Add specific stationery items here -->
         </div>
         <div style="flex: 1;">
-            <img src="Book03.jpg" alt="Stationery" style="width: 100%; max-width: 300px;">
+            <img src="assets/Book03.jpg" alt="Stationery" style="width: 100%; max-width: 300px;">
         </div>
     </section>
     <section id="snacks"
@@ -117,7 +117,7 @@
             <!-- Add specific snack and biscuit items here -->
         </div>
         <div style="flex: 1;">
-            <img src="Snaks03.webp" alt="Snacks & Biscuits" style="width: 100%; max-width: 300px;">
+            <img src="assets/Snaks03.webp" alt="Snacks & Biscuits" style="width: 100%; max-width: 300px;">
         </div>
     </section>
 
