--- a/Jana_Variety_Store.html
+++ b/Jana_Variety_Store.html
@@ -151,9 +151,9 @@
         </h2>
         <p><b>Jana Variety Store – Indulge in Chocolates, Snacks & More! </b> <br>
         <div style="display: flex; justify-content: space-around; align-items: center;">
-            <img src="Photos/Jana_store/Drums03.jpeg" alt="Drums" style="width: 200px; height: auto;">
-            <img src="Photos/Jana_store/Rack03.jpg" alt="Steel Rack" style="width: 200px; height: auto;">
-            <img src="Photos/Jana_store/steel-plastic-mix-4-seater-canteen-table-chair-set-834.jpg"
+            <img src="assets/Drums03.jpeg" alt="Drums" style="width: 200px; height: auto;">
+            <img src="assets/Rack03.jpg" alt="Steel Rack" style="width: 200px; height: auto;">
+            <img src="assets/steel-plastic-mix-4-seater-canteen-table-chair-set-834.jpg"
                 alt="Table and Chairs" style="width: 200px; height: auto;">
         </div>
         <p>
