--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KJ Enterprise</title>
-    <link rel="icon" href="Photos/PHOTO-2025-03-22-22-49-42.jpg" type="image/x-icon">
+    <link rel="icon" href="assets/PHOTO-2025-03-22-22-49-42.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -42,7 +42,7 @@
             margin: 0;
             padding: 0;
             color: #333;
-            background-image: url('banner-new.png');
+            background-image: url('assets/banner-new.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -681,7 +681,7 @@
                     case '1':
                         return {
                             name: 'Eblu Feo X',
-                            image: 'feo.jpg',
+                            image: 'assets/feo.jpg',
                             description: 'The Godawari Eblu Feo X is an electric scooter designed for family use, offering extra storage and comfort.',
                             Storage: '28-liter under-seat storage, spacious enough to carry a gas cylinder.',
                             Seating: 'Designed for driver + pillion rider.',
@@ -705,7 +705,7 @@
                     case '2':
                         return {
                             name: 'Mudit Ridh KING',
-                            image: 'Photos/Scooties/King02.jpg',
+                            image: 'assets/King02.jpg',
                             description: 'The Mudit Ridh KING is a stylish, eco-friendly electric scooter with a BLDC motor, waterproof rating, and 60V battery. It features a color display, reverse mode, USB charging, and 190mm ground clearance, making it perfect for daily commuting.',
                             Space: '28-liter Family Size Boot Spaceand Spacious Legroom',
                             color: 'Available in Red, Blue, and White.',
@@ -725,7 +725,7 @@
                     case '3':
                         return {
                             name: 'Mudit Ridh EXPLORER',
-                            image: 'Photos/Scooties/Explorer02.jpg',
+                            image: 'assets/Explorer02.jpg',
                             description: 'The Mudit Ridh Xplorer is an efficient electric scooter with a 250W BLDC motor, 100-110 km range, and 190mm ground clearance, ideal for urban commuting.',
                             Space: '28-liter Family Size Boot Spaceand Spacious Legroom',
                             color: 'Available in Red, Blue, and White.',
