--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
                         return {
 
                             name: "Mudit Ridh IMPULSER",
-                            image: "Photos/Scooties/Impulser02.jpg",
+                            image: "assets/Impulser02.jpg",
                             description: "The Mudit Ridh Impulser is a powerful electric scooter with a 250W BLDC motor, 100-110 km range, and 190mm ground clearance, designed for smooth urban commuting.",
                             Space: "Spacious legroom and family-size boot space.",
                             color: "Available in Sky Blue, Green, and White.",
@@ -882,21 +882,21 @@
                     case '11':
                         return {
                             name: 'Mudit Ridh RE-ECO',
-                            image: 'Photos/Scooties/Re-eco 2.jpg',
+                            image: 'assets/Re-eco 2.jpg',
                             description: 'For more information please call Us.',
                             price: 'Find out our best deals! Contact us for pricing details.'
                         };
                     case '12':
                         return {
                             name: 'Mudit Ridh FLEXI',
-                            image: 'Photos/Scooties/Flexi02 2.jpg',
+                            image: 'assets/Flexi02 2.jpg',
                             description: 'For more information please call Us.',
                             price: 'Find out our best deals! Contact us for pricing details.'
                         };
                     case '13':
                         return {
                             name: 'Model X13',
-                            image: 'feo.jpg',
+                            image: 'assets/feo.jpg',
                             description: 'The Model X7 is a high-performance scooter.',
                             price: 'Find out our best deals! Contact us for pricing details.'
                         };
@@ -989,14 +989,14 @@
                     case '10':
                         return {
                             name: 'Model X13',
-                            image: 'feo.jpg',
+                            image: 'assets/feo.jpg',
                             description: 'The Model X7 is a high-performance scooter.',
                             price: 'Find out our best deals! Contact us for pricing details.'
                         };
                     default:
                         return {
                             name: 'Unknown Model',
-                            image: 'feo.jpg',
+                            image: 'assets/feo.jpg',
                             description: 'Details not available.',
                             price: 'Find out our best deals! Contact us for pricing details.'
                         };
