--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
                     case '5':
                         return {
                             name: "Mudit Ridh LOADER",
-                            image: "Photos/Scooties/Loader02.jpg",
+                            image: "assets/Loader02.jpg",
                             description: "The Mudit Ridh Loader is a durable electric scooter designed for heavy-duty transport, featuring a 250W BLDC motor, 100-120 km range, and 400 kg load capacity.",
                             Space: "Heavy-duty cargo space with reinforced frame for stability.",
                             color: "Available in Black.",
@@ -789,7 +789,7 @@
                     case '6':
                         return {
                             name: "Mudit Ridh LYRA",
-                            image: "Photos/Scooties/Lyra02.jpg",
+                            image: "assets/Lyra02.jpg",
                             description: "The Mudit Ridh Lyra is a sleek and efficient electric scooter with a 250W BLDC motor, 100-110 km range, and 190mm ground clearance, perfect for urban commuting.",
                             Space: "Spacious legroom and family-size boot space.",
                             color: "Available in Red and White.",
@@ -1055,7 +1055,7 @@
                     style="width: 74px; height: 60px; border-radius: 5px;"></a><b>Petuk Biryani</b>
 
             <a href="Gas.html"><i class="fas fa-fire" style="font-size: 3em; margin-right: 5px;"></i><img
-                    src="Photos/WhatsApp Image 2025-04-01 at 11.48.17.jpeg" alt="Scooter Model 1"
+                    src="assets/WhatsApp Image 2025-04-01 at 11.48.17.jpeg" alt="Scooter Model 1"
                     style="width: 74px; height: 60px; border-radius: 5px;"></a><b>JALCHAK Gas</b>
 
             <a href="JNYC.html"><i class="fas fa-laptop" style="font-size: 3em; margin-right: 5px;"></i><img
