--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,7 @@
 
 
             <a href="Petuk_biriyani.html"><i class="fas fa-utensils" style="font-size: 3em; margin-right: 5px;"></i><img
-                    src="   assets/Biriyani_Bg.13.jpeg" alt="Scooter Model 1"
+                    src="   assets/Biriyani_Bg.jpeg" alt="Scooter Model 1"
                     style="width: 74px; height: 60px; border-radius: 5px;"></a><b>Petuk Biryani</b>
 
             <a href="Gas.html"><i class="fas fa-fire" style="font-size: 3em; margin-right: 5px;"></i><img
