--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
                     case '7':
                         return {
                             name: "Mudit Ridh NEON",
-                            image: "Photos/Scooties/Neon02.jpg",
+                            image: "assets/Neon02.jpg",
                             description: "The Mudit Ridh Neon is a high-performance electric scooter with a powerful 800-3000W BLDC motor, 180 km range, and 190mm ground clearance, designed for smooth urban commuting.",
                             Space: "Spacious legroom and family-size boot space.",
                             color: "Available in Red, Blue, and Black.",
