--- a/index.html
+++ b/index.html
@@ -1102,7 +1102,7 @@
                 <a href="tel:9733579705" class="book-button">Call to Book</a>
             </div>
             <div class="scooter-card">
-                <img src="Photos/Scooties/Explorer02.jpg" alt="Scooter Model 3">
+                <img src="assets/Explorer02.jpg" alt="Scooter Model 3">
                 <h3>Mudit Ridh EXPLORER</h3>
                 <p>The Mudit Ridh Xplorer is an efficient electric scooter with a 250W BLDC motor, 100-110 km range, and
                     190mm ground clearance, ideal for urban commuting.</p>
