Update image path for Mudit Ridth Loader

--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
                     case '16':
                         return {
                             name: "Mudit Ridth Loader (three wheeler)",
-                            image: "Photos/Scooties/Eblu spin.png",
+                            image: "assets/Eblu spin.png",
                             description: "Eblu Spin is an electric cycle designed for modern urban mobility, featuring a 250W motor, 0.43 kWh battery, and a 50 km range per charge, making it ideal for eco-friendly commuting.",
                             Space: "Compact and ergonomic frame with a comfortable seating position.",
                             color: "Available in multiple stylish colors to match your personality.",
