--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
                 <a href="tel:9733579705" class="book-button">Call to Book</a>
             </div>
             <div class="scooter-card">
-                <img src="Photos/Scooties/Lyra02.jpg" alt="Scooter Model 6">
+                <img src="assets/Lyra02.jpg" alt="Scooter Model 6">
                 <h3>Mudit Ridh LYRA</h3>
                 <p>The Mudit Ridh Lyra is a sleek and efficient electric scooter with a 250W BLDC motor, 100-110 km
                     range, and 190mm ground clearance, perfect for urban commuting.</p>
