--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@
             </div>
 
             <div class="scooter-card">
-                <img src="Photos/Scooties/Neon02.jpg" alt="Scooter Model 7">
+                <img src="assets/Neon02.jpg" alt="Scooter Model 7">
                 <h3>Mudit Ridh NEON</h3>
                 <p>The Mudit Ridh Neon is a high-performance electric scooter with a powerful 800-3000W BLDC motor, 180
                     km range, and 190mm ground clearance, designed for smooth urban commuting.</p>
