--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,7 @@
             </div>
 
             <div class="scooter-card">
-                <img src="Photos/Scooties/Rover02.jpg" alt="Scooter Model 8">
+                <img src="assets/Rover02.jpg" alt="Scooter Model 8">
                 <h3>Mudit Ridh ROVER</h3>
                 <p>The Mudit Ridh Rover is a powerful electric scooter with a 500-3000W BLDC motor, 70-90 km range, and
                     190mm ground clearance, designed for smooth urban commuting.</p>
