--- a/index.html
+++ b/index.html
@@ -1204,7 +1204,7 @@
         <h2></h2>
         <div class="scooter-container">
             <div class="scooter-card">
-                <img src="Photos/Scooties/Heavy02 2.jpg" alt="Scooter Model 1">
+                <img src="assets/Heavy02 2.jpg" alt="Scooter Model 1">
                 <h3>Mudit Ridh HEAVY</h3>
                 <p>Mudit Ridh HEAVY is a three-wheeler electric vehicle, likely designed for durability and efficient
                     transportation. While specific details about this model aren't widely available, Mudit Ridh
