--- a/index.html
+++ b/index.html
@@ -1236,7 +1236,7 @@
                 <a href="tel:9733579705" class="book-button">Call to Book</a>
             </div>
             <div class="scooter-card">
-                <img src="Photos/Scooties/Flexi02 2.jpg" alt="Scooter Model 16">
+                <img src="assets/Flexi02 2.jpg" alt="Scooter Model 16">
                 <h3>Mudit Ridth Loader (three wheeler)</h3>
                 <p>Mudit Ridh Loader is a powerful three-wheeler electric vehicle, designed for efficient cargo
                     transportation. Equipped with a high-performance BLDC motor, smart controller, and durable lithium
