--- a/index.html
+++ b/index.html
@@ -1194,7 +1194,7 @@
     </section>
 
     <section id="models" class="models-section">
-        <h2>Our Electric Scooty Models</h2>
+        <h2>Our Three Wheeler E-Rickshaw Models</h2>
         <div class="models-container">
             <!-- Add models here -->
         </div>
