--- a/Servises.html
+++ b/Servises.html
@@ -1,1 +1,119 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>KJ Enterprise - Our Other Services</title>
+    <link rel="icon" href="assets/PHOTO-2025-03-22-22-49-42.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="Servises.css">
+</head>
+
+<body>
+    <header>
+        <div class="container">
+            <div id="branding">
+                <h1><i class="fas fa-store"></i> KJ Enterprise</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html"><i class="fas fa-charging-station"></i> EV Scooty Showroom</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section class="business-section">
+        <img src="assets/WhatsApp Image 2025-04-01 at 11.48.17.jpeg" alt="HP Gas Seba Kendra">
+        <h2><i class="fas fa-fire"></i> HP Gas Seba Kendra</h2>
+        <p>Your trusted source for HP Gas. We provide safe and reliable gas services to meet your household and
+            commercial needs. We ensure timely delivery and excellent customer support.</p>
+        <b>👨‍💻 Get New Gas connection in minimum amount</b><br>
+        <b>👨‍💻 Gas home delivery is done within 48 hours</b><br>
+        <a href="tel:8327562702" class="order-gas-button">
+            <i class="fas fa-phone"></i> Order Gas
+        </a>
+
+        <a href="Gas.html" class="visit-gas-button">
+            Visit Jalchak HP Gas Seva Kendra
+        </a>
+    </section>
+
+    <section class="business-section">
+        <img src="assets/Biriyani_Bg.jpeg" alt="Restaurant">
+        <h2><i class="fas fa-utensils"></i> Petuk Biryani</h2>
+        <p>Enjoy delicious and authentic cuisine in a cozy atmosphere. Our menu features a variety of dishes made with
+            fresh, local ingredients. Experience culinary delights that will tantalize your taste buds.</p>
+        <b>😋 Biryani
+
+            😋 Egg Roll
+
+            😋 Chicken Roll
+            😋 Chicken Chaap
+
+            😋 Mutton Chaap
+
+            😋 Chicken Karry
+
+            😋 Roti</b><br>
+
+        <a href="tel:8327562702" class="order-food-button">
+            <i class="fas fa-phone"></i> Order Foods
+        </a>
+        <br>
+        <a href="Petuk_Biriyani.html" class="food-visit-button">
+            Visit Petuk Biryani
+        </a>
+
+    </section>
+
+    <section class="business-section">
+        <img src="assets/PHOTO-2025-04-01-11-48-21.jpg" alt="Computer Center">
+        <h2><i class="fas fa-laptop"></i> Computer Center</h2>
+        <p>Your one-stop destination for computer education and services. We offer a range of courses and assistance
+            for all your computing needs. Learn from industry experts and enhance your digital skills.</p>
+        <a href="tel:8327562702" class="get-admission-button">
+            <i class="fas fa-phone"></i> Get Admission
+        </a>
+        <br>
+        <a href="JNYC.html" class="get-admission-button">
+            Visit JNYC
+        </a>
+    </section>
+
+    <section class="business-section">
+        <img src="assets/PHOTO-2025-04-01-17-46-33.jpg" alt="Variety Store">
+        <h2><i class="fas fa-shopping-cart"></i> Variety Store</h2>
+        <p>Find everything you need at our well-stocked variety store. We offer a wide selection of products at
+            competitive prices. Shop with convenience and discover great deals every day.</p>
+    </section>
+
+    <section class="business-section">
+        <img src="assets/PHOTO-2025-04-01-11-48-20.jpg" alt="EV Scooty Showroom">
+        <h2><i class="fas fa-charging-station"></i> EV Scooty Showroom</h2>
+        <p>Explore the future of transportation with our range of electric scooters. Experience eco-friendly and
+            efficient commuting. Join the green revolution and ride into a sustainable future.</p>
+    </section>
+
+    <section class="business-section">
+        <img src="assets/PHOTO-2025-04-01-17-58-30.jpg" alt="Education and Scholarships">
+        <h2><i class="fas fa-graduation-cap"></i> Jalchak Swami Vivekanada Education Society</h2>
+        <p>We are committed to supporting education and providing opportunities for deserving students. Explore our
+            scholarship programs and educational resources to help you achieve your academic goals.</p>
+        <!-- Add more details about education and scholarship programs here -->
+
+        <a href="https://forms.gle/a2Bm2GzZv97q79ik9" class="get-admission-button">
+            Apply for Scholarship
+        </a>
+        <!-- Add more details about education and scholarship programs here -->
+    </section>
+
+    <footer>
+        <p>KJ Enterprise &copy; 2025</p>
+    </footer>
+</body>
+
+</html>
