--- a/index.html
+++ b/index.html
@@ -16,575 +16,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&family=Roboto+Slab:wght@400;600&display=swap"
         rel="stylesheet">
-    <style>
-        .book-button {
-            background-color: #4CAF50;
-            /* Green */
-            border: none;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin-top: 10px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
-        .book-button:hover {
-            background-color: #3e8e41;
-        }
-
-        /* General Styles */
-        body {
-            font-family: 'Nunito', sans-serif;
-            margin: 0;
-            padding: 0;
-            color: #333;
-            background-image: url('assets/banner-new.png');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            overflow-x: hidden;
-            /* Prevent horizontal scroll */
-            background-color: #f7f7f7;
-        }
-
-        header {
-            background: #5cb85c;
-            /* Eco-friendly green */
-            padding: 0.9rem 0;
-            text-align: left;
-            transition: background-color 0.3s ease;
-        }
-
-        header:hover {
-            background: #6ac26a;
-        }
-
-        header .logo {
-            display: flex;
-            align-items: center;
-            justify-content: left;
-        }
-
-        header .logo img {
-            width: 50px;
-            margin-right: 10px;
-            border-radius: 50%;
-            transition: transform 0.3s ease;
-        }
-
-        header .logo img:hover {
-            transform: rotate(360deg);
-        }
-
-        header h1 {
-            margin: 0;
-            color: white;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-            font-family: 'Roboto Slab', serif;
-            font-weight: 600;
-        }
-
-        nav {
-            background: #333;
-            padding: 0.5rem 0;
-            text-align: center;
-            margin-top: 1rem;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s ease;
-            border-radius: 25px;
-        }
-
-        nav:hover {
-            background: #444;
-        }
-
-        nav a {
-            color: #f0f0f0;
-            text-decoration: none;
-            padding: 0.75rem 1.25rem;
-            display: inline-block;
-            transition: color 0.3s ease, transform 0.3s ease;
-            border-radius: 20px;
-        }
-
-        nav a:hover {
-            color: #fff;
-            transform: scale(1.1);
-        }
-
-        .hero {
-            background-image: url('assets/scooter-bg.jpg');
-            background-size: cover;
-            color: #fff;
-            text-align: center;
-            padding: 5rem 0;
-            overflow: hidden;
-            position: relative;
-            border-radius: 15px;
-            margin-bottom: 2rem;
-        }
-
-        .hero::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.3);
-            z-index: 1;
-            border-radius: 15px;
-        }
-
-        .hero-content {
-            background-color: rgba(92, 184, 92, 0.5);
-            /* Increased transparency */
-            padding: 3rem;
-            /* Increased padding */
-            border-radius: 10px;
-            display: inline-block;
-            position: relative;
-            z-index: 2;
-            animation: fadeInUp 1s ease-out;
-        }
-
-        .hero-content h2 {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-            font-family: 'Roboto Slab', serif;
-            font-weight: 600;
-        }
-
-        .hero-content p {
-            font-size: 1.2rem;
-            margin-bottom: 2rem;
-        }
-
-        .btn {
-            background-color: #5cb85c;
-            color: white;
-            padding: 1rem 2rem;
-            text-decoration: none;
-            border-radius: 25px;
-            font-size: 1.2rem;
-            display: inline-block;
-            transition: background-color 0.3s ease, transform 0.3s ease;
-        }
-
-        .btn:hover {
-            background-color: #4cae4c;
-            transform: scale(1.1);
-        }
-
-        .models-section {
-            padding: 3rem 0;
-            text-align: center;
-            background-color: #f9f9f9;
-            border-radius: 15px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .models-section h2 {
-            font-size: 2rem;
-            margin-bottom: 2rem;
-            color: #333;
-            font-family: 'Roboto Slab', serif;
-            font-weight: 600;
-        }
-
-        .models-container {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-
-        .scooter-section {
-            padding: 3rem 0;
-            background-color: #f9f9f9;
-            border-radius: 15px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .scooter-container {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            padding: 20px;
-        }
-
-        .scooter-card {
-            width: 300px;
-            margin: 1rem;
-            padding: 1rem;
-            border: 1px solid #ddd;
-            border-radius: 15px;
-            background-color: #fff;
-            text-align: center;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-        }
-
-        .scooter-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-        }
-
-        .scooter-card img {
-            width: 100%;
-            border-radius: 10px;
-            margin-bottom: 10px;
-            transition: transform 0.3s ease;
-        }
-
-        .scooter-card img:hover {
-            transform: scale(1.05);
-        }
-
-        .scooter-card h3 {
-            font-size: 1.5rem;
-            margin-top: 0;
-            margin-bottom: 0.5rem;
-            color: #333;
-            font-family: 'Roboto Slab', serif;
-            font-weight: 600;
-        }
-
-        .scooter-card p {
-            font-size: 1rem;
-            margin-bottom: 1rem;
-            color: #666;
-        }
-
-        .about-section {
-            padding: 3rem 0;
-            background-color: #fff;
-            margin-bottom: auto;
-            overflow: hidden;
-            border-radius: 15px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .about-section h2 {
-            font-size: 2rem;
-            margin-bottom: 2rem;
-            text-align: center;
-            color: #333;
-            font-family: 'Roboto Slab', serif;
-            font-weight: 600;
-        }
-
-        .about-content {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 1rem;
-            animation: fadeIn 1s ease-out;
-        }
-
-        .about-content p {
-            font-size: 1.1rem;
-            line-height: 1.6;
-            color: #555;
-        }
-
-        .about-content ul {
-            list-style-type: disc;
-            padding-left: 20px;
-            margin-top: 1rem;
-        }
-
-        .about-content ul li {
-            margin-bottom: 0.5rem;
-        }
-
-        footer {
-            background-color: #5cb85c;
-            color: #fff;
-            text-align: center;
-            padding: 1rem 0;
-            box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
-            border-radius: 15px;
-        }
-
-        /* Keyframe Animations */
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-
-            to {
-                opacity: 1;
-            }
-        }
-
-        /* Modal Styles */
-        .modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-            z-index: 1000;
-        }
-
-        .modal-content {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            width: 80%;
-            max-width: 600px;
-            overflow-y: auto;
-            /* Enable vertical scrolling */
-            max-height: 80vh;
-            /* Limit maximum height to 80% of the viewport height */
-        }
-
-        .close-button {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 20px;
-            cursor: pointer;
-            color: #888;
-        }
-
-        /* WhatsApp Button Styles */
-        /* WhatsApp Button Styles */
-        .whatsapp-button {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background-color: #25D366;
-            color: white;
-            border-radius: 50%;
-            width: 60px;
-            height: 60px;
-            text-align: center;
-            box-shadow: 2px 2px 3px #999;
-            z-index: 100;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 30px;
-        }
-
-        .whatsapp-button a {
-            color: white;
-            text-decoration: none;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-        }
-
-        /* Call Button Styles */
-        .call-button {
-            position: fixed;
-            bottom: 90px;
-            right: 20px;
-            background-color: #007bff;
-            color: white;
-            border-radius: 50%;
-            width: 60px;
-            height: 60px;
-            text-align: center;
-            box-shadow: 2px 2px 3px #999;
-            z-index: 99;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 24px;
-        }
-
-        .call-button a {
-            color: white;
-            text-decoration: none;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-        }
-
-        /* Location Button Styles */
-        .location-button {
-            position: fixed;
-            bottom: 160px;
-            /* Positioned above Call button */
-            right: 20px;
-            background-color: #dc3545;
-            color: white;
-            border-radius: 50%;
-            width: 60px;
-            height: 60px;
-            text-align: center;
-            line-height: 60px;
-            font-size: 30px;
-            box-shadow: 2px 2px 3px #999;
-            z-index: 98;
-            /* Placed below WhatsApp button */
-        }
-
-        .location-button a {
-            color: white;
-            text-decoration: none;
-            display: block;
-        }
-
-        /* Inquiry Button Styles */
-        .inquiry-button {
-            position: fixed;
-            bottom: 230px;
-            /* Adjust as needed */
-            right: 20px;
-            background-color: #007bff;
-            /* Use a suitable color */
-            color: white;
-            border-radius: 50%;
-            width: 60px;
-            height: 60px;
-            text-align: center;
-            line-height: 60px;
-            font-size: 30px;
-            box-shadow: 2px 2px 3px #999;
-            z-index: 97;
-            /* Ensure it's above other buttons */
-        }
-
-        .inquiry-button a {
-            color: white;
-            text-decoration: none;
-            display: block;
-        }
-
-        /* Facebook Button Styles */
-        .facebook-button {
-            position: fixed;
-            bottom: 300px;
-            /* Adjust as needed */
-            right: 20px;
-            background-color: #1877F2;
-            /* Facebook blue */
-            color: white;
-            border-radius: 50%;
-            width: 60px;
-            height: 60px;
-            text-align: center;
-            line-height: 60px;
-            font-size: 30px;
-            box-shadow: 2px 2px 3px #999;
-            z-index: 96;
-            /* Ensure it's above other buttons */
-        }
-
-        .facebook-button a {
-            color: white;
-            text-decoration: none;
-            display: block;
-        }
-
-        @keyframes pulse {
-            0% {
-                transform: scale(1);
-            }
-
-            50% {
-                transform: scale(1.1);
-            }
-
-            100% {
-                transform: scale(1);
-            }
-        }
-
-        /* Crazy Animations */
-        .scooter-card:nth-child(odd) {
-            animation: flyInLeft 2s ease-out;
-        }
-
-        .scooter-card:nth-child(even) {
-            animation: flyInRight 2s ease-out;
-        }
-
-        @keyframes flyInLeft {
-            from {
-                transform: translateX(-1000px);
-                opacity: 0;
-            }
-
-            to {
-                transform: translateX(0);
-                opacity: 1;
-            }
-        }
-
-        @keyframes flyInRight {
-            from {
-                transform: translateX(1000px);
-                opacity: 0;
-            }
-
-            to {
-                transform: translateX(0);
-                opacity: 1;
-            }
-        }
-
-        /* Marquee Styles */
-        .marquee-container {
-            overflow: scroll;
-            white-space: nowrap;
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 0;
-            border-radius: 10px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        }
-
-        .marquee-content {
-            display: inline-block;
-            padding-left: 100%;
-            /* Start the text off screen */
-            animation: marquee 80s linear infinite;
-            /* Adjust speed as needed */
-        }
-
-        @keyframes marquee {
-            0% {
-                transform: translateX(0%);
-            }
-
-            100% {
-                transform: translateX(-100%);
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="Enterprise.css">
+    
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const scooterCards = document.querySelectorAll('.scooter-card');
