fix: i had forgotten to link the Petuk_biriyani.css file so now i add this.

--- a/Petuk_biriyani.html
+++ b/Petuk_biriyani.html
@@ -9,10 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    
-</head>
-
+<link rel="stylesheet" href="Petuk_biriyani.css">
+    </head>
 <body>
     <header style="background-color: #e44d26;">
         <div class="logo" style="display: flex; align-items: center; justify-content: center;">
